# quantify-core

./: .codacy.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .prospector.yml  .pylintrc  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  RELEASE_NOTES.md  conftest.py  pylint.html  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_setup.txt  setup.cfg  setup.py  tox.ini
.ci/: Dockerfile  vanilla-thin.Dockerfile
.gitlab/issue_templates/: Bug.md  Defect.md  Enhancement.md  Feature.md
.gitlab/merge_request_templates/: Default.md  General.md  New release.md
Dockerfiles/: Dockerfile_python38
Dockerfiles/unix/: Dockerfile_python37  Dockerfile_python38  Dockerfile_python39  Dockerfile_python_latest
Dockerfiles/windows/: Dockerfile_python37  Dockerfile_python38  Dockerfile_python39  Dockerfile_python_latest
doc/: api_reference.rst  concepts.rst  index.rst  installation.rst  pulsar_assembler.rst  sequencer.rst  toolchain.rst
doc/example_notebooks/: pulsar_params.ipynb
docker/unix/: Dockerfile_python37  Dockerfile_python38  Dockerfile_python39  Dockerfile_python_latest
docker/windows/: Dockerfile_python37  Dockerfile_python38  Dockerfile_python39  Dockerfile_python_latest
docs/: Makefile  api_reference.md  api_reference.rst  close_all_instruments.rst.txt  conf.py  core_concepts.rst  dataset_spec.rst  index.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  nitpick-exceptions.txt  notebook_to_rst.py  pulsar_assembler.rst  refs.bib  sequencer.rst  sphinx_extensions.md  sphinx_extensions.rst  toolchain.rst  usage.md  usage.py.rst  usage.rst  usage.rst.py
docs/_static/: quantify.css  quantify_core.css
docs/docstring_examples/: quantify.analysis.base_analysis.AnalysisSteps.rst.txt  quantify.analysis.base_analysis.BaseAnalysis.run_custom_analysis_args.rst.txt  quantify.analysis.base_analysis.BaseAnalysis.run_custum_analysis_args.rst.txt  quantify.analysis.base_analysis.BaseAnalysis.run_until.rst.txt  quantify.analysis.base_analysis.Basic1DAnalysis.rst.txt  quantify.analysis.base_analysis.Basic2DAnalysis.rst.txt  quantify.analysis.base_analysis.RabiAnalysis.rst.txt  quantify.analysis.base_analysis.RamseyAnalysis.rst.txt  quantify.analysis.base_analysis.ResonatorSpectroscopyAnalysis.rst.txt  quantify.analysis.base_analysis.T1Analysis.rst.txt  quantify.data.handling.to_gridded_dataset.rst.txt  quantify.measurement.control.setpoints_grid.rst.txt  quantify.visualization.color_utilities.set_hlsa.rst.txt  quantify.visualization.mpl_plotting.set_cyclic_colormap.rst.txt  quantify_core.analysis.base_analysis.AnalysisSteps.rst.txt  quantify_core.analysis.base_analysis.BaseAnalysis.run_custom_analysis_args.rst.txt  quantify_core.data.handling.to_gridded_dataset.rst.txt  quantify_core.measurement.control.setpoints_grid.rst.txt  quantify_core.visualization.color_utilities.set_hlsa.rst.txt  quantify_core.visualization.mpl_plotting.set_cyclic_colormap.rst.txt
docs/example_notebooks/: 1. Basic MeasurementControl.ipynb  2. Advanced MeasurementControl.ipynb  2_Advanced_MeasurementControl.ipynb  3_Adaptive_MeasurementControl.ipynb  Adaptive.ipynb  Advanced_MC.ipynb  Gettables and Settables.ipynb  MeasurementControl.ipynb  T1_MeasurementControl.ipynb  T3_sequencer.ipynb  Tutorial 1. Controlling a basic experiment using MeasurementControl.ipynb  Tutorial 2. Advanced capabilities of the MeasurementControl.ipynb  Tutorial 3. Adaptive Measurements.ipynb  pulsar_params.ipynb  qcm_qrm_demo.ipynb  scheduler_demo.ipynb
docs/examples/: analysis.base_analysis.AnalysisSteps.rst.txt  analysis.base_analysis.AnalysisSteps.rst.txt.py  analysis.base_analysis.BaseAnalysis.run_custom_analysis_args.py.rst.txt  analysis.base_analysis.BaseAnalysis.run_custom_analysis_args.rst.txt  analysis.base_analysis.BaseAnalysis.run_custom_analysis_args.rst.txt.py  analysis.calibration.has_calibration_points.rst.txt  analysis.calibration.has_calibration_points.rst.txt.py  data.dataset_attrs.QCoordAttrs.rst.txt  data.dataset_attrs.QCoordAttrs.rst.txt.py  data.dataset_attrs.QDatasetAttrs.rst.txt  data.dataset_attrs.QDatasetAttrs.rst.txt.py  data.dataset_attrs.QDatasetAttrs.software_versions.rst.txt  data.dataset_attrs.QDatasetAttrs.software_versions.rst.txt.py  data.dataset_attrs.QDatasetIntraRelationship.py.rst.txt  data.dataset_attrs.QDatasetIntraRelationship.rst.txt  data.dataset_attrs.QDatasetIntraRelationship.rst.txt.py  data.dataset_attrs.QVarAttrs.rst.txt  data.dataset_attrs.QVarAttrs.rst.txt.py  data.handling.to_gridded_dataset.rst.txt  data.handling.to_gridded_dataset.rst.txt.py  measurement.control.setpoints_grid.py.rst.txt  measurement.control.setpoints_grid.rst.txt  measurement.control.setpoints_grid.rst.txt.py  utilities.deprecated.rst.txt  utilities.deprecated.rst.txt.py  utilities.examples_support.mk_iq_shots.rst.py  utilities.examples_support.mk_iq_shots.rst.txt  utilities.examples_support.mk_iq_shots.rst.txt.py  utilities.examples_support.mk_trace_for_iq_shot.py.rst.txt  utilities.examples_support.mk_trace_for_iq_shot.rst.py  utilities.examples_support.mk_trace_for_iq_shot.rst.txt  (+9 more)
docs/source/: conf.py  (+3 more)
frozen-requirements/: frozen-requirements-0.5.1.txt  frozen-requirements-0.5.2.txt  frozen-requirements-0.5.3.txt  frozen-requirements-0.6.0.txt  frozen-requirements-0.6.1.txt  frozen-requirements-0.6.2.txt  frozen-requirements-0.6.3.txt  frozen-requirements-0.6.4.txt  frozen-requirements-0.6.5.txt  frozen-requirements-0.7.0.txt  frozen-requirements-0.7.1.txt  frozen-requirements-0.7.2.txt  frozen-requirements-0.7.3.txt  frozen-requirements-0.7.5.txt  frozen-requirements-0.7.6.txt  frozen-requirements.txt
jupyter_notebooks/: MeasurementControl.ipynb  test
quantify/: AUTHORS.rst  CONTRIBUTING.rst  __init__.py  quantify.py  setup.cfg  setup.py  tox.ini
quantify_core/: __init__.py  _version.py
tests/: helpers.py  test_headers_and_copyright.py  test_quantify.py
(+394 files in other folders)
