# This configuration should be migrated to  pyproject.toml, when its stable and propagaged through all services.
# The main problem at the moment of writing this file is that ReadTheDocs enforces old version of setuptools.

[metadata]
name = quantify-core
description = Unified quantum computing, solid-state and pulse sequencing physical experimentation framework.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = The Quantify consortium consisting of Qblox and Orange Quantum Systems
maintainer_email = maintainers@quantify-os.org
license = BSD 3-Clause License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    quantum
    quantify
project_urls =
    Documentation = https://quantify-quantify-core.readthedocs-hosted.com
    Source = https://gitlab.com/quantify-os/quantify-core
    Issue tracker = https://gitlab.com/quantify-os/quantify-core/-/issues
    Changelog = https://gitlab.com/quantify-os/quantify-core/-/blob/main/CHANGELOG.md
    Slack = https://join.slack.com/t/quantify-hq/shared_invite/zt-vao45946-f_NaRc4mvYQDQE_oYB8xSw
    Authors = https://gitlab.com/quantify-os/quantify-core/-/blob/main/AUTHORS.md

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True
install_requires =
    numpy !=1.19.4  # 1.19.4 not allowed because of a bug on windows https://github.com/numpy/numpy/issues/17726
    qcodes >=0.35.0 # 0.35.0 introduced qcodes.parameters module
    scipy >=1.5.0, !=1.6.0
    h5netcdf
    xarray >=0.19.0
    matplotlib !=3.5.0
    lmfit >=1.0.3 # Bugfix for lmfit (https://github.com/lmfit/lmfit-py/pull/758)
    pyqt5 >5.15.2  # 5.15.2 has known bug, #170, https://bugreports.qt.io/browse/PYSIDE-1473
    pyqtgraph ==0.12.4
    jsonschema
    adaptive
    filelock
    appnope
    uncertainties
    pendulum  # used for timestamps formatting in the dataset attributes
    dataclasses_json # used in dataset_attrs
    dill  # Tests fail without dill installed, likely for a good reason
    methodtools  # used in base_analysis for self-bound lru_cache

[options.extras_require]
test =
    pytest
    pytest-mock
docs =
    jupyter-sphinx >=0.3.2
    myst-nb
    quantify-scheduler  # used to generate schedule example in the dataset design docs
    rich[jupyter]
    scanpydoc
    sphinx-autobuild
    sphinx-autodoc-typehints  # required by either sphinx.ext.autodoc or sphinx.ext.napoleon (sphinx==4.5.0)
    sphinx-jsonschema >=1.15
    sphinx-rtd-theme
    sphinx-togglebutton
    sphinx >=4.5.0
    sphinxcontrib-bibtex
dev =
    quantify-core[docs,test]
    # Pytest-cov is used to generage test coverage reports, which is rather a development than testing requirement
    pytest-cov
    # Run tests in parallel
    pytest-xdist
    # Scikit-optimize is used in one optional test
    scikit-optimize
    # Linting, code style, static analysis
    black
    pre-commit
    pre-commit-hooks
    prospector
    pylint

[options.packages.find]
include =
    quantify_core
    quantify_core.*

[options.package_data]
quantify_core =
    py.typed
    **/schemas/*.json

[bdist_wheel]
universal = 1

[aliases]
test = pytest
